Leo's name corrected
Sorry!

--- a/pset_template_Attila.tex
+++ b/pset_template_Attila.tex
@@ -24,7 +24,7 @@
 
 % Title
 \title{Problem Set 1 \\ \medskip \Large{Econometrics III}}
-\author{\Large Jackson Bunting, Attila Gyetvai, Peter Horvath, Leonardo Salim Saker Chavez\footnote{Department of Economics, Duke University}}
+\author{\Large Jackson Bunting, Attila Gyetvai, Peter Horvath, Leonardo Salim Saker Chaves\footnote{Department of Economics, Duke University}}
 \date{\today}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
