Compiling on my PC
Commented out units package from mathtex and also changed the format of
the prob12 figure because eps wasn't working on my pc.

--- a/Preamble/packMath.tex
+++ b/Preamble/packMath.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath}                                       % AMS math package
 \usepackage{amssymb}                                       % Math symbols
 \usepackage{amsthm}                                        % Custom theorem environments
-\usepackage{units}                                         % Numerical fractions
+%\usepackage{units}                                         % Numerical fractions
 \usepackage{centernot}                                     % Logical negation in the middle of characters; e.g. not iff
 
 % Custom theorems
