--- a/pset_template_Attila.tex
+++ b/pset_template_Attila.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}                                %! Character encoding
 \usepackage[T1]{fontenc}                                   %! Font encoding
 \usepackage[english]{babel}                                %! Language setting
+\usepackage{epstopdf}
 
 % Set path
 \newcommand{\path}{Preamble}
@@ -188,7 +189,7 @@ As $\mu$ increases (especially after $\mu \geq 0.4$), the distribution gets clos
 \begin{figure}[H]
   \centering
   \caption{Simulated empirical distributions}
-  \includegraphics[scale=0.6]{prob12.eps}
+  \includegraphics[scale=0.6]{prob12.pdf}
 \end{figure}
 \end{problem}
 
